hsreplaynet/static/styles/components.scss
/* ... */
.stream-list {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: center;
	list-style-type: none;
	padding-left: 0;
	margin-top: 10px;

	> li {
		flex: 1;
		min-width: 300px;
		max-width: 400px;
		margin: 10px;
	}
}

.stream-thumbnail {
	display: inline-block;
	width: 100%;

	> figure {
		overflow: hidden;
		width: 100%;
		position: relative;

		> img {
			display: block;
			height: auto;
			width: 100%;
		}

		> figcaption {
			color: black;
			justify-content: space-between;
			white-space: nowrap;
			width: 100%;
			margin-top: 0.25em;

			&, * {
				overflow: hidden;
				text-overflow: ellipsis;
			}

			strong {
				display: block;
				width: 100%;
			}

			span {
				float: right;
			}
		}

		> aside {
			position: absolute;
			bottom: 3.5em;
			right: 0;
		}
	}

	&:hover {
		text-decoration: none;

		> figure {
			> figcaption strong {
				text-decoration: underline;
			}

			> img {
				filter: brightness(65%);
			}

		}

		.stream-thumbnail-default-image {
			color: rgb(120, 120, 120);
		}
	}
}

.stream-thumbnail-default-image {
	position: relative;
	width: 100%;
	color: rgb(191, 191, 191);
	background-color: rgb(225, 225, 225);
	font-size: 3em;
	border: solid 1px rgb(191, 191, 191);

	> * {
		position: absolute;
		width: 100%;
		height: 100%;
		display: flex;
		justify-content: center;
		align-items: center;
	}
}

.error-reporter {
	margin-top: 4rem;
	font-size: 2rem;

	h1 {
		font-size: 3.5rem;
		font-weight: normal;
	}

	pre {
		font-size: 2rem;
	}
}

.rank-icon-standalone {
	display: flex;
	flex-grow: 0;
	position: relative;

	align-items: center;
	justify-content: center;

	width: 100px;
	height: 100px;

	overflow: hidden;
	margin: -10px;

	img {
		position: absolute;
		width: 100%;
		height: 100%;
	}

	figcaption {
		position: absolute;
		text-align: center;

		font-size: 1.8em;
		font-weight: bold;
		color: white;

		text-shadow: -1px -1px 0 #000,
			-1px 1px 0 #000,
			1px 1px 0 #000,
			1px -1px 0 #000;
	}
}

.dust-filter {
	padding: 10px;
	display: flex;
	position: relative;

	.dust-preset {
		height: 34px;
		opacity: 0.3;
		margin-right: 10px;
		cursor: pointer;

		&:hover {
			opacity: 0.8;
		}

		&.active, &.active:hover {
			opacity: 1;
		}
	}

	input {
		min-width: 0;
	}
}

.account-dropdown {
	max-width: 25em;

	> li > a {
		overflow: hidden;
		text-overflow: ellipsis;
	}
}

ul.list-ltr, ol.list-ltr {
	display: grid;
	grid-auto-flow: row;

	&.list-ltr-2 {
		grid-template-columns: auto auto;
		grid-column-gap: 40px;
	}

	@media(max-width: 991px) {
		&.list-ltr-2 {
			grid-template-columns: auto;
		}
	}
}

.list-group-no-margin {
	margin: 0;
}

.progress-indicator {
	display: flex;
	flex-direction: row;
	align-items: center;

	.progress-indicator-step {
		display: block;
		height: 14px;
		width: 14px;
		border-radius: 50%;
	}

	.progress-indicator-join {
		flex-grow: 1;
		height: 6px;
		margin: 0 -1px;
	}

	> * {
		background-color: #aaa;
		z-index: 0;

		&.active {
			background-color: $red;
			z-index: 1;

			&.current {
				background-color: #aaa;
				z-index: 1;
				border: solid 3px $red;

				&:last-child {
					background-color: $red;
				}
			}
		}
	}
}

.slot-machine {
	display: block;
	overflow: hidden;
	height: 1.45em;

	> ul {
		position: relative;
		padding-left: 0;
		margin-bottom: 0;
		transition: top ease-in-out 0.8s;
		height: 100%;

		> li {
			list-style-type: none;
			height: 100%;
		}
	}
}

